// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render AudioPlayer AudioPlayer is rendered correctly with pause 1`] = `
Array [
  <button
    className="track__button track__button--play"
    disabled={true}
    onClick={[Function]}
    type="button"
  />,
  <div
    className="track__status"
  >
    <audio />
  </div>,
]
`;

exports[`Render AudioPlayer AudioPlayer is rendered correctly with play 1`] = `
Array [
  <button
    className="track__button track__button--pause"
    disabled={true}
    onClick={[Function]}
    type="button"
  />,
  <div
    className="track__status"
  >
    <audio />
  </div>,
]
`;
